--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -14,3 +14,18 @@
   box-sizing: border-box;
   margin: auto;
 }
+
+@media screen and (max-width: 840px) {
+  .section-width {
+    max-width: 768px;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .section-width {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
