--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -2,28 +2,35 @@
   display: flex;
   flex-direction: column;
   padding-top: 70px;
-  padding-bottom: 80px;
 }
 
 .movies-list__grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(364px, 1fr));
   justify-items: center;
+  align-items: start;
   row-gap: 37px;
   column-gap: 24px;
+  min-height: 448px; /*иначе никак*/
   padding-bottom: 10px;
+}
+
+.movies-list__block-button {
+  min-height: 140px;
+  box-sizing: border-box;
+  padding-top: 50px;
+  padding-bottom: 80px;
+  margin: auto;
 }
 
 .movies-list__button {
   width: 320px;
-  align-self: center;
   background-color: #2F2F2F;
   border: none;
   font-size: 12px;
   line-height: 14.52px;
   font-weight: 500;
   color: #FFFFFF;
-  margin-top: 50px;
   padding: 10.74px;
   border-radius: 6px;
   cursor: pointer;
