--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,8 @@
 @import url(./components/SearchForm/SearchForm.css);
 @import url(./components/MoviesCardList/MoviesCardList.css);
 @import url(./components/MoviesCard/MoviesCard.css);
+@import url(./components/Profile/Profile.css);
+@import url(./components/PageWithForm/PageWithForm.css);
+@import url(./components/Register/Register.css);
+@import url(./components/Login/Login.css);
+@import url(./components/NotFound/NotFound.css);
