--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -5,6 +5,10 @@
   padding-left: 0;
 }
 
+.navigation__main {
+  display: none;
+}
+
 .navigation__buttons {
   padding-right: 20px;
 }
@@ -23,4 +27,33 @@
 
 .active {
   font-weight: 500;
+}
+
+@media screen and (max-width: 768px) {
+  .navigation {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 106px;
+  }
+
+  .navigation__main {
+    display: block;
+  }
+
+  .navigation__buttons {
+    padding-right: 0;
+    padding-bottom: 28px;
+  }
+
+  .navigation__button {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 500;
+    text-decoration: none;
+  }
+
+  .active {
+    border-bottom: 2px solid #FFFFFF;
+    padding-bottom: 4px;
+  }
 }
