--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -13,6 +13,7 @@
 .about-project__tittle {
   font-size: 20px;
   line-height: 24.2px;
+  letter-spacing: -0.04em;
   padding-top: 70px;
   padding-bottom: 26px;
   margin: 0;
@@ -51,7 +52,7 @@
   color: #FFFFFF;
 }
 
-.about-project_mark_front-end {
+.about-project__mark {
   grid-row: 3 / 4;
   padding-top: 14px;
   font-size: 14px;
@@ -60,11 +61,69 @@
   color: #8B8B8B;
 }
 
-.about-project_mark_back-end {
-  grid-row: 3 / 4;
-  padding-top: 14px;
-  font-size: 14px;
-  line-height: 17px;
-  font-weight: 500;
-  color: #8B8B8B;
+@media screen and (max-width: 840px) {
+  .about-project {
+    column-gap: 30px;
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
+
+  .about-project__tittle {
+    padding-bottom: 22px;
+  }
+
+  .about-project__description {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .about-project__digits {
+    padding-top: 93px;
+    grid-template-columns: 140px auto;
+  }
+
+}
+
+@media screen and (max-width: 420px) {
+  .about-project {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+
+  .about-project__tittle {
+    font-size: 18px;
+    line-height: 21.8px;
+    padding-top: 60px;
+    padding-bottom: 16px;
+    grid-column: 1 / 3;
+  }
+
+  .about-project__tittle:nth-of-type(n+2) {
+    padding-top: 56px;
+  }
+
+  .about-project__description {
+    font-size: 11px;
+    line-height: 16px;
+    grid-row: auto;
+  }
+
+  .about-project__digits {
+    padding-top: 60px;
+    grid-template-columns: 100px auto;
+  }
+
+  .about-project__blocks {
+    font-size: 11px;
+    line-height: 13.3px;
+    padding-top: 11px;
+    padding-bottom: 11px;
+  }
+
+  .about-project__mark {
+    font-size: 11px;
+    line-height: 12.7px;
+    font-weight: 400;
+    padding-top: 10px;
+  }
 }
