--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -64,9 +64,107 @@
   padding-left: 7px;
 }
 
+.header__menu-button {
+  display: none;
+}
+
+.popup {
+  width: 100vw;
+  height: 100vh;
+  background-color: #000000b3;
+  display: flex;
+  flex-direction: row-reverse;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.3s, opacity 0.25s linear;
+}
+
+.popup_opened {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup__close-button {
+  background-image: url(../../images/close-button.svg);
+  width: 22px;
+  height: 22px;
+  align-self: flex-end;
+  background-color: transparent;
+  background-position: center;
+  border: none;
+  cursor: pointer;
+  margin-top: 27.4px;
+  margin-right: 27.4px;
+
+}
+
+.header__menu {
+  width: 67.7%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #202020;
+  height: 100vh;
+}
+
+@media screen and (max-width: 890px) {
+  .header__container {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__buttons_type_authorized {
+    display: none;
+  }
+
+  .header__menu-button {
+    display: block;
+    background-image: url(../../images/menu-button.svg);
+    width: 44px;
+    height: 44px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+
+  .header__profile {
+    margin: 0;
+    padding-top: 50vh;
+  }
+}
+
 @media screen and (max-width: 420px) {
-  .header {
-    padding-right: 4px;
-    padding-left: 4px;
+  .header__container {
+    padding-right: 14px;
+    padding-left: 14px;
+  }
+
+  .header__button-login {
+    font-size: 10px;
+    padding: 5px 12px;
+  }
+
+  .header__button-register {
+    font-size: 10px;
+    padding-right: 14px;
+  }
+
+  .header__menu-button {
+    width: 40px;
+    height: 43px;
+  }
+
+  .header__menu {
+    width: 100%;
+  }
+
+  .header__profile {
+    padding-top: 56vh;
   }
 }
