--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -15,8 +15,7 @@
 
 .movies-card__image {
   display: block;
-  width: 364px;
-  height: 203px;
+  width: 100%;
   object-fit: contain;
   object-position: center;
 }
@@ -36,6 +35,7 @@
   line-height: 15.73px;
   font-weight: 500;
   margin: 0;
+  padding-right: 12px;
 }
 
 .movies-card__like-button {
@@ -64,6 +64,42 @@
   color: #8B8B8B;
   margin: 0;
   padding-left: 16px;
-  padding-right: 16px;
   padding-bottom: 16px;
+}
+
+@media screen and (max-width: 820px) {
+  .movies-card__name {
+    padding-right: 21px;
+  }
+
+  .movies-card__time-duration {
+    padding-left: 14px;
+    padding-bottom: 14px;
+  }
+
+  .movies-card__container {
+    padding-top: 8px;
+    padding-bottom: 7px;
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .movies-card__name {
+    font-size: 12px;
+    line-height: 14.52px;
+    padding-right: 6px;
+  }
+
+  .movies-card__time-duration {
+    font-size: 10px;
+    line-height: 12.1px;
+  }
+
+  .movies-card__container {
+    padding-top: 7px;
+    padding-bottom: 6px;
+    padding-right: 10px;
+  }
 }
