--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -31,12 +31,56 @@
 .portfolio__text {
   font-size: 30px;
   line-height: 50px;
-  padding-bottom: 19px;
+  letter-spacing: -0.04em;
+  padding-bottom: 20px;
   padding-top: 20px;
   margin: 0;
 }
 
 .portfolio__link-arrow {
-  height: 21px;
+  height: 18px;
   padding: 19px 6px;
+}
+
+@media screen and (max-width: 840px) {
+  .portfolio {
+    padding-bottom: 70px;
+  }
+
+  .portfolio__list {
+    border-bottom: 1px solid #E6E6E6;
+  }
+
+  .portfolio__text {
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .portfolio__text {
+    font-size: 23px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .portfolio {
+    padding-bottom: 51px;
+  }
+  .portfolio__header {
+    font-size: 14px;
+  }
+
+  .portfolio__links {
+    padding-top: 20px;
+  }
+
+  .portfolio__text {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .portfolio__link-arrow {
+    height: 11px;
+    padding: 15px 5px;
+  }
 }
