--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -27,6 +27,7 @@
   align-items: center;
   justify-content: center;
   background-color: #073042;
+  position: relative;
 }
 
 .promo__title {
@@ -45,6 +46,8 @@
   height: 320px;
   width: 320px;
   position: absolute;
+  top: calc(50% - 358px / 2);
+  left: calc(50% - 320px / 2);
   animation-name: to-appear, gradient;
   animation-duration: 4s, 8s;
   animation-fill-mode: forwards, backwards;
@@ -83,5 +86,7 @@
   .promo__logo {
     height: 248px;
     width: 248px;
+    top: calc(50% - 285px / 2);
+    left: calc(50% - 248px / 2);
   }
 }
