--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -12,6 +12,7 @@
 .techs__subtitle {
   font-size: 50px;
   line-height: 58px;
+  letter-spacing: -0.04em;
   align-self: center;
   padding-top: 90px;
   padding-bottom: 26px;
@@ -21,6 +22,7 @@
 .techs__description {
   font-size: 14px;
   line-height: 20px;
+  letter-spacing: -0.04em;
   align-self: center;
   max-width: 460px;
   text-align: center;
@@ -28,25 +30,82 @@
 }
 
 .techs__list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 90px);
   justify-content: center;
   list-style-type: none;
   margin: 0;
   padding-top: 100px;
   padding-left: 0;
+  column-gap: 10px;
+  row-gap: 10px;
 }
 
 .techs__technology {
   background-color: #303030;
   border-radius: 10px;
-  min-width: 90px;
   padding: 21px 0;
   font-size: 14px;
   line-height: 17px;
+  letter-spacing: -0.04em;
   text-align: center;
-  margin-left: 10px;
 }
 
-.techs__technology:first-of-type {
-  margin-left: 0px;
+@media screen and (max-width: 840px) {
+  .techs__container {
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
+
+  .techs__subtitle {
+    padding-top: 80px;
+    padding-bottom: 22px;
+  }
+
+  .techs__description {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .techs__list {
+    grid-template-columns: repeat(auto-fit, 84px);
+    padding-top: 83px;
+  }
+
+  .techs__technology {
+    min-width: 84px;
+    font-size: 12px;
+    line-height: 14.5px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .techs__subtitle {
+    font-size: 40px;
+    line-height: 47px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .techs__container {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+
+  .techs__subtitle {
+    font-size: 30px;
+    line-height: 36.3px;
+    padding-top: 60px;
+    padding-bottom: 24px;
+  }
+
+  .techs__description {
+    font-size: 11px;
+    line-height: 16px;
+  }
+
+  .techs__list {
+    padding-top: 50px;
+    grid-template-columns: 84px 84px;
+  }
 }
