style: add transition for all buttons and links

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -54,6 +54,11 @@
   font-weight: 500;
   color: #FFFFFF;
   text-decoration: none;
+  transition: all 0.1s linear;
+}
+
+.about-me__link:hover {
+  opacity: 0.7;
 }
 
 .about-me__photo {
