--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -46,6 +46,11 @@
   line-height: 15.73px;
   text-decoration: none;
   color: #FFFFFF;
+  transition: all 0.1s linear;
+}
+
+.footer__link:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 840px) {
@@ -86,7 +91,6 @@
     font-size: 12px;
     line-height: 14.52px;
   }
-
 
 .footer__copyright {
   padding-top: 18px;
