--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,6 +18,14 @@
   height: 38px;
 }
 
+.header__logo-link {
+  transition: all 0.1s linear;
+}
+
+.header__logo-link:hover {
+  opacity: 0.7;
+}
+
 .header__buttons {
   display: flex;
   align-items: center;
@@ -31,6 +39,11 @@
   color: #FFFFFF;
   padding-right: 30px;
   text-decoration: none;
+  transition: all 0.1s linear;
+}
+
+.header__button-register:hover {
+  opacity: 0.7;
 }
 
 .header__button-login {
@@ -42,6 +55,11 @@
   text-decoration: none;
   border-radius: 3px;
   color: #000000;
+  transition: all 0.1s linear;
+}
+
+.header__button-login:hover {
+  opacity: 0.7;
 }
 
 .header__profile {
@@ -49,6 +67,11 @@
   align-items: center;
   margin-left: 61px;
   text-decoration: none;
+  transition: all 0.1s linear;
+}
+
+.header__profile:hover {
+  opacity: 0.7;
 }
 
 .header__profile-text {
@@ -99,7 +122,11 @@
   cursor: pointer;
   margin-top: 27.4px;
   margin-right: 27.4px;
+  transition: all 0.1s linear;
+}
 
+.popup__close-button:hover {
+  opacity: 0.7;
 }
 
 .header__menu {
@@ -135,7 +162,7 @@
 
   .header__profile {
     margin: 0;
-    padding-top: 50vh;
+    margin-top: 50vh;
   }
 }
 
@@ -165,6 +192,6 @@
   }
 
   .header__profile {
-    padding-top: 56vh;
+    margin-top: 56vh;
   }
 }
