--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -17,6 +17,11 @@
   padding-top: 25px;
   padding-bottom: 25px;
   padding-left: 40px;
+  transition: all 0.1s linear;
+}
+
+.navtab__link:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 420px) {
