--- a/src/components/PageWithForm/PageWithForm.css
+++ b/src/components/PageWithForm/PageWithForm.css
@@ -38,6 +38,11 @@
   margin-top: 65px;
   border: none;
   cursor: pointer;
+  transition: all 0.1s linear;
+}
+
+.form__submit-button:hover {
+  opacity: 0.7;
 }
 
 .form__container {
@@ -58,6 +63,11 @@
 .form__link {
   color: #4285F4;
   text-decoration: none;
+  transition: all 0.1s linear;
+}
+
+.form__link:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
