--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -71,6 +71,11 @@
   border: none;
   background-color: inherit;
   cursor: pointer;
+  transition: all 0.1s linear;
+}
+
+.profile-form__submit-button:hover {
+  opacity: 0.7;
 }
 
 .profile__signout {
@@ -81,6 +86,11 @@
   border: none;
   background-color: inherit;
   cursor: pointer;
+  transition: all 0.1s linear;
+}
+
+.profile__signout:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 890px) {
