fix: remove button, replace background-color, add delete button

--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -90,6 +90,7 @@
   .techs__container {
     padding-top: 70px;
     padding-bottom: 70px;
+    background-color: #202020;
   }
 
   .techs__subtitle {
