--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -5,6 +5,7 @@
   border-radius: 6px;
   overflow: hidden;
   transition: 0.6s;
+  cursor: pointer;
 }
 
 .movies-card:hover {
@@ -36,6 +37,27 @@
   font-weight: 500;
   margin: 0;
   padding-right: 12px;
+}
+
+.movies-card__delete-button {
+  background-image: url(../../images/delete-button.svg);
+  background-position: center;
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  border: none;
+  opacity: 0;
+  cursor: pointer;
+  transition: all 0.2s linear;
+}
+
+.movies-card__container:hover .movies-card__delete-button {
+  opacity: 1;
+}
+
+.movies-card__delete-button:hover {
+  border: 1px solid #303030;
+  border-radius: 50%;
 }
 
 .movies-card__like-button {
