--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -37,6 +37,10 @@
   transition: opacity 0.2s linear;
 }
 
+.movies-list__button_disabled {
+  display: none;
+}
+
 .movies-list__button:hover {
   opacity: 0.7;
 }
@@ -53,6 +57,12 @@
     row-gap: 30px;
     column-gap: 30px;
     min-height: auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .movies-list__grid {
+    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
   }
 }
 
