--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -39,6 +39,15 @@
     }
 }
 
+@keyframes paragraph-opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .preloader {
     position: fixed;
     top: 0;
@@ -54,9 +63,16 @@
 }
 
 .preloader__container {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     position: relative;
+}
+
+.preloader__empty-result {
+  font-size: 24px;
+  font-weight: 500;
+  margin: 0;
+  animation: paragraph-opacity 1s ease-in-out;
 }
 
 .preloader__round {
@@ -89,4 +105,10 @@
     z-index: 10;
     background: #3DDC84;
     animation: preloader-inside-red 1s ease-in-out infinite;
+}
+
+@media screen and (min-width: 768px) {
+  .preloader__empty-result {
+    font-size: 44px;
+  }
 }
