--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -46,7 +46,8 @@
   background-color: transparent;
   width: 30px;
   height: 30px;
-  border: none;
+  border-radius: 50%;
+  border: 1px solid #222222;
   opacity: 0;
   cursor: pointer;
   transition: all 0.2s linear;
@@ -57,8 +58,7 @@
 }
 
 .movies-card__delete-button:hover {
-  border: 1px solid #303030;
-  border-radius: 50%;
+  border: 1px solid #444444;;
 }
 
 .movies-card__like-button {
@@ -73,7 +73,7 @@
 }
 
 .movies-card__like-button_active {
-  background-image: url(../../images/like-button_active.svg)
+  background-image: url(../../images/like-button_active.svg);
 }
 
 .movies-card__like-button:hover {
