--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,6 +1,7 @@
 .navigation {
   display: flex;
   list-style: none;
+  align-items: center;
   margin: 0;
   padding-left: 0;
 }
@@ -34,6 +35,32 @@
   font-weight: 500;
 }
 
+.navigation__profile {
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+  text-decoration: none;
+  transition: all 0.1s linear;
+}
+
+.navigation__profile:hover {
+  opacity: 0.7;
+}
+
+.navigation__profile-text {
+  font-size: 13px;
+  line-height: 12px;
+  font-weight: 500;
+  color: #FFFFFF;
+}
+
+.navigation__profile-logo {
+  height: 26px;
+  width: 26px;
+  padding-left: 7px;
+  border-radius: 50%;
+}
+
 @media screen and (max-width: 768px) {
   .navigation {
     flex-direction: column;
@@ -57,8 +84,20 @@
     text-decoration: none;
   }
 
+  .navigation__profile {
+    margin: 0;
+    margin-top: 50vh;
+  }
+
   .active {
     border-bottom: 2px solid #FFFFFF;
     padding-bottom: 4px;
   }
 }
+
+@media screen and (max-width: 420px) {
+  .navigation__profile {
+    margin-top: 56vh;
+  }
+}
+
