--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -30,6 +30,8 @@
   text-decoration: none;
   cursor: pointer;
   transition: all linear 0.1s;
+  background-color: transparent;
+  border: none;
 }
 
 .not-found__link:hover {
