fix: deleting search data when logout, changing the validator logic

--- a/src/components/PageWithForm/PageWithForm.css
+++ b/src/components/PageWithForm/PageWithForm.css
@@ -64,6 +64,10 @@
   opacity: 0.7;
 }
 
+.form__submit-button_disabled:hover {
+  cursor: default;
+}
+
 .form__container {
   display: flex;
   align-items: center;
